# platform-workspace

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  repos.yaml
scripts/stack/src/stack/: config.py
scripts/stack/src/stack/commands/: clone.py  down.py  logs.py  smoke.py  validate.py
src/stack/: __init__.py  cli.py  config.py
src/stack/commands/: __init__.py  logs.py  new_sprint.py  prompt.py  smoke.py  up.py  validate.py
state/: sprint-pcp-domain-refactor-20260213T235416.md  sprint.md
templates/: sprint.template.md
templates/prompts/: implementer.template.md  planner.template.md
workstreams/: feature-delivery.md  interface-changes.md  observability.md
workstreams/repos/: aisp.md  apis.md  pcp.md  stack.md  uip.md
